--- a/read/geturl.html
+++ b/read/geturl.html
@@ -3,16 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Baca CSV + Menu & Copy Link</title>
+<title>Baca CSV Shopee Tools</title>
 <style>
   body {font-family: Arial, sans-serif; margin: 20px; max-width: 900px; margin-inline:auto;}
   h2 {text-align:center;}
-  .menu {display:flex; gap:10px; flex-wrap:wrap; justify-content:center; margin-bottom:15px;}
-  button {
-    padding:8px 15px; border:none; border-radius:4px; cursor:pointer;
-    background:#007bff; color:white;
+  .menu {
+    display:flex; gap:10px; flex-wrap:wrap; justify-content:center;
+    background:#f1f1f1; padding:10px; border-radius:8px; margin-bottom:20px;
   }
-  button:hover {background:#0056b3;}
+  button, input[type="file"]::file-selector-button {
+    padding:8px 15px;
+    border:none;
+    border-radius:4px;
+    cursor:pointer;
+    background:#007bff;
+    color:white;
+    font-weight:bold;
+  }
+  button:hover, input[type="file"]::file-selector-button:hover {
+    background:#0056b3;
+  }
   #headerList,#csvTable,#linkSection{margin-top:15px;}
   table {border-collapse:collapse; width:100%;}
   th,td{border:1px solid #aaa; padding:8px;}
@@ -22,16 +32,17 @@
 </head>
 <body>
 
-<h2>Baca File CSV dan Pilih Kolom</h2>
+<h2>📂 Pembaca CSV Shopee + Generator Link</h2>
+
 <div class="menu">
-  <input type="file" id="csvFile" accept=".csv">
-  <button id="toggleHeaders" style="display:none;">Tampilkan/Sembunyikan Kolom</button>
-  <button id="showDataBtn" style="display:none;">Tampilkan Data</button>
-  <button id="toggleLinks" style="display:none;">Tampilkan/Sembunyikan Link</button>
-  <button id="copyLinksBtn" style="display:none;">Salin Semua Link</button>
+  <label><strong>1️⃣ Pilih File:</strong> <input type="file" id="csvFile" accept=".csv"></label>
+  <button id="toggleHeaders" style="display:none;">2️⃣ Pilih Kolom</button>
+  <button id="showDataBtn" style="display:none;">3️⃣ Tampilkan Data</button>
+  <button id="toggleLinks" style="display:none;">4️⃣ Lihat Link Produk</button>
+  <button id="copyLinksBtn" style="display:none;">📋 Salin Semua Link</button>
 </div>
 
-<div id="headerList"></div>
+<div id="headerList" style="display:none;"></div>
 <table id="csvTable"></table>
 <div id="linkSection" style="display:none;"></div>
 
@@ -46,6 +57,7 @@ document.getElementById('csvFile').addEventListener('change',e=>{
     const rows=ev.target.result.split('\n').map(r=>r.trim()).filter(r=>r);
     csvData=rows.map(r=>r.split(',').map(c=>c.replace(/^"|"$/g,'')));
     headers=csvData[0];
+
     const hList=document.getElementById('headerList');
     hList.innerHTML='<b>Pilih kolom yang ingin ditampilkan:</b><br><br>';
     headers.forEach((h,i)=>{
@@ -55,6 +67,8 @@ document.getElementById('csvFile').addEventListener('change',e=>{
       hList.appendChild(label);
       hList.appendChild(document.createElement('br'));
     });
+
+    hList.style.display='block';
     document.getElementById('toggleHeaders').style.display='inline-block';
     document.getElementById('showDataBtn').style.display='inline-block';
   };
@@ -70,17 +84,21 @@ document.getElementById('showDataBtn').onclick=()=>{
   const checked=Array.from(document.querySelectorAll('#headerList input:checked')).map(cb=>+cb.value);
   const table=document.getElementById('csvTable'); table.innerHTML='';
   if(checked.length===0){table.innerHTML='<tr><td>Tidak ada kolom dipilih</td></tr>';return;}
+
   const komisiIndex=headers.findIndex(h=>h.trim()==="Total Komisi per Produk(Rp)");
   let data=csvData.slice(1);
   if(komisiIndex!==-1)data.sort((a,b)=>(parseFloat(b[komisiIndex].replace(/[^\d.-]/g,''))||0)-(parseFloat(a[komisiIndex].replace(/[^\d.-]/g,''))||0));
+
   const head=document.createElement('tr');
   checked.forEach(i=>{const th=document.createElement('th');th.textContent=headers[i];head.appendChild(th);});
   table.appendChild(head);
+
   data.forEach(r=>{
     const tr=document.createElement('tr');
     checked.forEach(i=>{const td=document.createElement('td');td.textContent=r[i]||'';tr.appendChild(td);});
     table.appendChild(tr);
   });
+
   document.getElementById('toggleLinks').style.display='inline-block';
 };
 
@@ -100,7 +118,7 @@ document.getElementById('toggleLinks').onclick=()=>{
 document.getElementById('copyLinksBtn').onclick=()=>{
   const links=[...document.querySelectorAll('#linkSection a')].map(a=>a.href).join('\n');
   navigator.clipboard.writeText(links);
-  alert('Semua link berhasil disalin!');
+  alert('✅ Semua link berhasil disalin ke clipboard!');
 };
 </script>
 
